[package]
name = "omnity-types"
version = "0.1.0"
edition = "2021"


[dependencies]
candid = { version = "0.10" }
ciborium = "0.2.1"
ic-cdk = "0.14"
serde = "1"
serde_json = "^1.0.117"
serde_bytes = "^0.11.14"

thiserror = "1"
log = "0.4"
hex = "0.4.3"
sha2 = "0.10.6"

serde_with = { version = "3.1.0", features = ["json"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "from",
    "into",
    "display",
    "try_into",
] }
lazy_static = "1.4.0"
ic-stable-structures = "0.6.5"


getrandom = { version = "0.2", features = ["custom"] }
# log deps
humantime = "2.1"
serde_derive = "1.0.208"
time = "0.3.36"
ic-canister-log = "0.2"
env_filter = "=0.1.1"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
bs58 = "0.4.0"
bech32 = "0.9.0"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", package = "ic-canisters-http-types" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "9b239d1d67253eb14a35be6061e3967d5ec9db9d" }
ethereum-types = { git = "https://github.com/paritytech/parity-common.git", package = "ethereum-types" }
# ic-solana = { git = "https://github.com/octopus-network/ic-solana/", branch = "feature/metaplex", package = "ic-solana" }
ic-solana = { path = "/home/boern/workspace/ultraspace/ic-solana/src/ic-solana" }

# [patch.crates-io.curve25519-dalek]
# git = "https://github.com/solana-labs/curve25519-dalek.git"
# rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[dev-dependencies]
# tokio = { version = "1.35.1", features = ["full"] }
# rand = "0.8.4"
